# minidsp-remote-control

./: .gitignore  README.md
minidsp-server/: Cargo.toml  Rocket.toml  minidsp.sqlite
minidsp-server/.cargo/: config.toml
minidsp-server/.sqlx/: query-00d7172f40eca8d3e0aab1f3e3e3584139c2f9b77a8d3ea2894dbbcda3e30a3a.json  query-08d521523b3e5f154e750258bb9ac385d00ab33f71c327175045a66430756f6b.json  query-192b0b9dd00dd5421d902f0d150ac14c49bcde26f8af192f5adc6da1ee308c88.json  query-1da74c3a8d6561f085fbba420bad565a710c1f71a5f0ec4254f6ae196860ee41.json  query-449ed869ec2f8ca16ddef56144be48cbb7f11427e4162fc36b6905ac4605e717.json  query-548d1003c01beef6c0cdc46ba86baa9a3c564f84594bc82384599893d4e5b57c.json  query-70cee7c6bf25e0d8171eebf981ccd0ffb62177cdca5ae2867cbafccd77adad14.json  query-acfcfc833b9a323c5de8cba1b7dc5d894629ae147e72e918cc9884c166cb1e16.json  query-b0e812a67dd6ead03ce777798129130513a8dc33f0a1be1d1769d450e320789e.json  query-c3f6703fa5f08db229a11bc611a9dcb12b4d58b1db01ed42e7ac1e1f2fc7041a.json  query-c41adc9b70f93531d96c915333fb7f9836099139341f5c1833764363f0a4892a.json  query-d1e8164d647902f12acc7234b484552aa125c9e6bf2383850ad006974f595201.json  query-e3af9f87a62d765906584e652e7e5858e17e607e81f9b450392088ca2d3d4db2.json  query-f216d3d12c786fec004e8da07162a3979ca99264b59f35228ddb30744a2ed38b.json  query-f96aecff44d30b8e39ed238a916e1b158b4c26a7e8928444b1899fd9775adc4a.json  query-ff40e373e1d814c926ad26be75f0f0f814308a52f32004980f2ddea7edfff079.json
minidsp-server/certs/: device.crt  device.key  rootCA.pem
minidsp-server/src/: anonymous.rs  basic.rs  config.rs  (+9 more)
(+180 files in other folders)
