[package]
name = "minidsp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
jsonwebtoken = "9.3.1"
rcgen = { version = "0.14.1", features = ["pem"] }
base64 = "0.22.1"
time = { version = "0.3.6", default-features = false }
#rppal = "0.22.1"

[dependencies.sqlx]
version = "0.7.0"
default-features = false
features = ["macros", "migrate"]

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["sqlx_sqlite"]
